calico/templates/allow-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-by-default
spec:
  podSelector:
    matchLabels: {}

kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow
spec:
  podSelector:
    matchLabels:
      app: http-echo
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: busybox
